2009-12-09  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Fix some things found while trying to compile JavaScriptCore with clang++.

        * wtf/FastMalloc.h:
        Add correct exception specifications for the allocation/deallocation operators.
        
        * wtf/Vector.h:
        * wtf/VectorTraits.h:
        Fix a bunch of struct/class mismatches.

2009-12-08  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin Adler.

        move code generation portions of Nodes.cpp to bytecompiler directory
        https://bugs.webkit.org/show_bug.cgi?id=32284

        * bytecompiler/NodesCodegen.cpp: Copied from parser/Nodes.cpp. Removed parts that
        are not about codegen.
        * parser/Nodes.cpp: Removed everything that is about codegen.

        Update build systems:
        
        * Android.mk:
        * GNUmakefile.am:
        * JavaScriptCore.gypi:
        * JavaScriptCore.pri:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * JavaScriptCoreSources.bkl:

2009-12-08  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        [wx] Mac plugins support.
        
        https://bugs.webkit.org/show_bug.cgi?id=32236

        * wtf/Platform.h:

2009-12-08  Dmitry Titov  <dimich@chromium.org>

        Rubber-stamped by David Levin.

        Revert and reopen "Add asserts to RefCounted to make sure ref/deref happens on the right thread."
        It may have caused massive increase of reported leaks on the bots.
        https://bugs.webkit.org/show_bug.cgi?id=31639

        * GNUmakefile.am:
        * JavaScriptCore.gypi:
        * JavaScriptCore.vcproj/WTF/WTF.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * runtime/Structure.cpp:
        (JSC::Structure::Structure):
        * wtf/RefCounted.h:
        (WTF::RefCountedBase::ref):
        (WTF::RefCountedBase::hasOneRef):